kadu (0.12.2-2) UNRELEASED; urgency=low

  * Added importat fix in debian/patches/05-hotfix_upstream.patch reported by
    upstream

 -- Patryk Cisek <patryk@debian.org>  Wed, 05 Sep 2012 07:59:11 +0200

kadu (0.12.2-1) unstable; urgency=low

  * New upstream release
  * Added import_history plugin back
  * Bumped debhelper's version in Build-Depends
  * Added Pre-Depends: ${misc:Pre-Depends} to kadu and
    kadu-external-modules
  * Added translations to mpd_mediaplayer plugin in debian/kadu-
    common.install

 -- Patryk Cisek <patryk@debian.org>  Mon, 03 Sep 2012 16:03:29 +0200

kadu (0.12.0-1) unstable; urgency=low

  * New upstream release
  * Updated debian/build_kadu.sh to new branches names (0.12/*)
  * Updated debian/patches/03-about-dialog.patch to make it fit 0.12.0
  * Removed importhistory module, since it's no longer maintained
  * Removed debian/tmp/usr/share/kadu/plugins/sdk/ from
    debian/kadu-dev.install
  * Using dpkg-buildflags for hardening now
  * Removed glass icon theme until directory names get fixed
  * Fixed resolution of dialog-error.png in default icon theme

 -- Patryk Cisek <patryk@debian.org>  Sun, 05 Aug 2012 17:21:53 +0200

kadu (0.11.2-1) unstable; urgency=low

  * New upstream release
  * Removed debian/patches/05-kadu_completion_fix.patch -- fix already
    included upstream
  * Added libqt4-svg to kadu's Depends

 -- Patryk Cisek <patryk@debian.org>  Tue, 17 Apr 2012 07:52:47 +0200

kadu (0.11.1-3) unstable; urgency=low

  * Backported the following fix of kadu_completion plugin from upstream
    repository:
    git://gitorious.org/mime_tex/kadu_completion.git
    The backported commit's fix: dfa94a16d3ff51e9bc05996836e4d46627d93d84

 -- Patryk Cisek <patryk@debian.org>  Wed, 04 Apr 2012 15:15:58 +0200

kadu (0.11.1-2) unstable; urgency=low

  * Fixed serious mistake in changelog entry for 0.11.1-1:
    This upstream versions contains important security issues... ->