@@ -8,6 +8,7 @@ Build-Depends: aspell,
                bzip2,
                cmake (>=2.6),
                debhelper (>= 8.1.3),
+               hardening-wrapper,
                libasound2-dev,
                libaspell-dev,
                libaudio-dev,
