@@ -1,7 +1,8 @@
 kadu (0.12.2-2) UNRELEASED; urgency=low
 
-  * Added importat fix in debian/patches/05-hotfix_upstream.patch reported by
-    upstream
+  * Added important fix in debian/patches/05-hotfix_upstream.patch reported
+    by upstream
+  * Using hardening-wrapper from now on
 
  -- Patryk Cisek <patryk@debian.org>  Wed, 05 Sep 2012 07:59:11 +0200
 
